    optional (with the default being off) #15834.  Don't try to set the 
    clock if running inside a coLinux environment #52870.

    Update default PATH ordering to try to follow default behavior in 
    other distro's and because it's logical that /usr/local should 
    override /usr which should override /.  Fixes #12531.

    Move devfs stuff out of baselayout and into the devfsd package.

  14 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix rc-status to work with new COLS code.

  14 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Allow users to mount ramfs/tmpfs/ramdisk as their svcdir and 
    stop assuming ramfs==ramdisk #64079.

  13 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Rework the code for managing /dev to make it more flexible for 
    users.  Some don't want to use devfs/udev but rather just create 
    their own nodes.  Handles some issues with #44906 / #67276.

    Move the utmp clearing code out of bootmisc and into /sbin/rc.  
    The utmp log must be cleared while in the initial boot level 
    (meaning inside /sbin/rc) because as soon as rc exists, init 
    writes a 'boot' record (`who -b`) which would normally be lost 
    when the bootmisc init.d script is run #61727.

  13 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Cosmetic fixes for starting loopback interface

    SpanKY doesn't like the dots... disable them by default, but you
    can set RC_DOT_PATTERN=' .' in /etc/conf.d/rc to get them back

* rc-scripts 1.6.2 (13 Oct 2004)

  13 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Install net.modules.d to /lib/rcscripts instead of /etc so we
    don't have to deal with CONFIG_PROTECT

    Fix diff code in modules_load so it can identify which functions
    have been modified

    Fix fallback mechanism in iface_start so that it works correctly
    and doesn't report a bogus error message when trying the fallback

    Get rid of need_begin trickery in iface_stop

    Simplify eend processing in dhcp modules
