@@ -64,8 +64,12 @@ start() {
 			done
 		fi
 		# Reset pam_console permissions
-		[ -x /sbin/pam_console_apply -a ! -c /dev/.devfsd ] && \
+		if [ -x /sbin/pam_console_apply ] \
+		   && [ ! -c /dev/.devfsd ] \
+		   && [ ! -c /dev/.udev ]
+		then
 			/sbin/pam_console_apply -r
+		fi
 		# Create the .keep to stop portage from removing /var/lock
 		>/var/lock/.keep
 		eend 0
